--- a/settings.gradle
+++ b/settings.gradle
@@ -20,5 +20,6 @@ rootProject.name = 'things'
 include 'things-common'
 include 'things-core'
 include 'things-test'
+include 'things-rest'
 include 'things-mongo'
 include 'things-rooms'
