--- a/things-rooms/build.gradle
+++ b/things-rooms/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'spring-boot'
 def springBootVersion = '1.0.2.RELEASE'
 
 springBoot {
-    mainClass = "hub.RoomService"
+    mainClass = "RoomService"
 }
 
 sourceCompatibility = 1.8
