--- a/things-common/build.gradle
+++ b/things-common/build.gradle
@@ -1,3 +1,7 @@
+dependencies {
+    compile("javax.inject:javax.inject:1")
+}
+
 task copyDeps(type: Copy) {
     from configurations.runtime
     into "${buildDir}/deps"
