--- a/things-hub/build.gradle
+++ b/things-hub/build.gradle
@@ -65,6 +65,8 @@ dependencies {
 
     compile ("org.springframework.boot:spring-boot-starter-data-mongodb:"+springBootVersion)
 
+    compile ("org.codehaus.groovy:groovy-all:2.3.0")
+
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("org.hamcrest:hamcrest-core:1.3")
     testCompile("org.hamcrest:hamcrest-library:1.3")
