--- a/things-rest/build.gradle
+++ b/things-rest/build.gradle
@@ -34,4 +34,7 @@ dependencies {
     compile("com.fasterxml.jackson.module:jackson-module-jsonSchema:2.3.3")
     compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.3.1")
 
+    compile ("fm.void.jetm:jetm:1.2.3")
+    compile ("fm.void.jetm:jetm-optional:1.2.3")
+
 }
