--- a/settings.gradle
+++ b/settings.gradle
@@ -22,7 +22,10 @@ include 'things-core'
 include 'things-test'
 include 'things-rest'
 include 'things-mongo'
+include 'things-jpa'
 include 'things-hub'
 include 'things-rooms'
 include 'things-examples'
+
+include 'things-jpa'
 
