--- a/things-rooms/build.gradle
+++ b/things-rooms/build.gradle
@@ -27,14 +27,14 @@ targetCompatibility = 1.8
 dependencies {
 
     compile project(':things-core')
-    compile project(':things-jpa')
+//    compile project(':things-jpa')
     compile project(':things-rest')
     compile('com.google.guava:guava:17.0')
 
     compile("org.springframework.boot:spring-boot-starter-parent:" + springBootVersion)
 
-    compile("org.springframework:spring-jdbc:" + springVersion)
-    compile("org.springframework:spring-tx:" + springVersion)
+//    compile("org.springframework:spring-jdbc:" + springVersion)
+//    compile("org.springframework:spring-tx:" + springVersion)
 
     compile("org.springframework.boot:spring-boot-starter-web:" + springBootVersion) {
         exclude module: "spring-boot-starter-tomcat"
