--- a/things-rest/build.gradle
+++ b/things-rest/build.gradle
@@ -36,6 +36,11 @@ repositories {
 
 def springBootVersion = '1.0.2.RELEASE'
 
+ext {
+    name = 'Things REST'
+    description = 'Component enabling REST API, using spring boot'
+}
+
 dependencies {
 
     compile project(':things-core')
