--- a/things-examples/build.gradle
+++ b/things-examples/build.gradle
@@ -36,3 +36,8 @@ dependencies {
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
+
+ext {
+    name = 'Things examples'
+    description = 'Examples of several configurations, different backends and so on'
+}
