--- a/things-mongo/build.gradle
+++ b/things-mongo/build.gradle
@@ -13,6 +13,12 @@ repositories {
     maven { url "http://repo.spring.io/libs-snapshot" }
 }
 
+ext {
+    name = 'Things Mongo'
+    description = 'Component enabling mongo backend'
+}
+
+
 /*
  * Things
  *
