Removed rooms module

--- a/settings.gradle
+++ b/settings.gradle
@@ -24,7 +24,7 @@ include 'things-rest'
 include 'things-mongo'
 include 'things-jpa'
 include 'things-hub'
-include 'things-rooms'
+//include 'things-rooms'
 include 'things-examples'
 include 'things-jpa'
 
