--- a/things-hub/build.gradle
+++ b/things-hub/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     compile("com.jolbox:bonecp:0.8.0.RELEASE")
     compile("cglib:cglib:3.1")
     compile("mysql:mysql-connector-java:5.1.30")
+    compile("org.postgresql:postgresql:9.3-1100-jdbc41")
 
     compile("com.unboundid:unboundid-ldapsdk:2.3.6")
 
