Refactoring: common types & annotations into things-common

--- a/settings.gradle
+++ b/settings.gradle
@@ -23,6 +23,7 @@ include 'things-test'
 include 'things-rest'
 include 'things-mongo'
 include 'things-jpa'
+include 'things-hub-common'
 include 'things-hub'
 //include 'things-rooms'
 include 'things-examples'
