--- a/things-common/build.gradle
+++ b/things-common/build.gradle
@@ -19,6 +19,8 @@
 
 dependencies {
     compile("javax.inject:javax.inject:1")
+    compile('com.google.guava:guava:17.0')
+    compile('com.fasterxml.jackson.core:jackson-annotations:2.3.0')
 }
 
 ext {
