--- a/things-common/build.gradle
+++ b/things-common/build.gradle
@@ -20,7 +20,21 @@
 dependencies {
     compile("javax.inject:javax.inject:1")
     compile('com.google.guava:guava:17.0')
-    compile('com.fasterxml.jackson.core:jackson-annotations:2.3.0')
+    compile('com.fasterxml.jackson.core:jackson-core:2.3.0')
+    compile('com.fasterxml.jackson.core:jackson-databind:2.3.0')
+    compile("com.fasterxml.jackson.datatype:jackson-datatype-guava:2.2.0")
+    compile("com.fasterxml.jackson.module:jackson-module-afterburner:2.2.0")
+    compile("com.fasterxml.jackson.module:jackson-module-jsonSchema:2.3.3")
+    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.3.1")
+
+    compile("org.reflections:reflections:0.9.9-RC1") {
+        exclude module: 'javassist'
+    }
+}
+
+tasks.withType(JavaCompile) {
+    sourceCompatibility = "1.7"
+    targetCompatibility = "1.7"
 }
 
 ext {
