--- a/things-rest/build.gradle
+++ b/things-rest/build.gradle
@@ -52,12 +52,11 @@ dependencies {
 
     compile("org.springframework:spring-tx:" + springVersion)
 
-    compile("com.fasterxml.jackson.datatype:jackson-datatype-guava:2.2.0")
-    compile("com.fasterxml.jackson.module:jackson-module-afterburner:2.2.0")
-    compile("com.fasterxml.jackson.module:jackson-module-jsonSchema:2.3.3")
-    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.3.1")
 
-    compile("com.codahale.metrics:metrics-jersey:3.0.2")
+
+    compile("com.codahale.metrics:metrics-jersey:3.0.2") {
+        exclude module: "asm"
+    }
     compile("com.codahale.metrics:metrics-servlets:3.0.2")
     compile("com.ryantenney.metrics:metrics-spring:3.0.0")
     compile("com.codahale.metrics:metrics-logback:3.0.2")
