--- a/hub-core/build.gradle
+++ b/hub-core/build.gradle
@@ -102,6 +102,8 @@ dependencies {
 
     compile("org.codehaus.groovy:groovy-all:2.3.0")
 
+//    compile("commons-daemon:commons-daemon:1.0.15")
+
 //    compile("org.apache.shiro:shiro-core:1.2.3")
 //    compile("org.apache.shiro:shiro-web:1.2.3")
 //    compile("org.apache.shiro:shiro-spring:1.2.3")
@@ -113,5 +115,9 @@ dependencies {
     testCompile("org.mockito:mockito-core:1.9.5")
 
 }
+
+
+
+
 
 
