--- a/hub-common/build.gradle
+++ b/hub-common/build.gradle
@@ -1,3 +1,13 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'org.gradle.api.plugins:gradle-nexus-plugin:0.7.1'
+    }
+}
+
 repositories {
     mavenLocal()
     mavenCentral()
