re-download Snapshot dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,10 @@ ext {
 
 subprojects {
 
+    configurations.all {
+        // check for updates every build
+        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+    }
 
     repositories {
         mavenLocal()
